# CSS-font-embedder

./: README.md  pyproject.toml
font_embedder/: main.py  template.py
tests/: test_font_embedder.py
