[tool.poetry]
name = "font-embedder"
version = "0.1.0"
description = ""
authors = ["Connor Sahleen <Connor.Sahleen@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
font-embedder = "font_embedder.main:app"

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.6.1"
rich = "^12.5.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
